welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: illegal inheritance from final class Array
	var T =new Array[Color](getMondeHauteur()){
                   ^Array2:4: error: recursive variable T needs type
		T(0)=getCouleurSol()
                ^